[package]
name = "problem_solving"
version = "0.1.0"
authors = ["Jang Whemoon <palindrom615@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
criterion = "0.3"

[lib]
bench=false

[[bin]]
name = "blank"
path = "src/blank.rs"
bench = false

[[bin]]
name = "boj2014"
path = "src/boj2014.rs"
bench = false

[[bench]]
name = "smmh"
path = "benches/data_structures/smmh.bench.rs"
harness = false
