[package]
name = "problem_solving"
version = "0.1.0"
authors = ["Jang Whemoon <palindrom615@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
criterion = "0.3"

[lib]
bench=false

[[bin]]
name = "blank"
path = "src/blank.rs"
bench = false

[[bin]]
name = "boj2014"
path = "src/boj2014.rs"
bench = false

[[bin]]
name = "boj5904"
path = "src/boj5904.rs"
bench = false

[[bin]]
name = "boj15900"
path = "src/boj15900.rs"
bench = false

[[bin]]
name = "boj12837"
path = "src/boj12837.rs"
bench = false

[[bin]]
name = "boj13301"
path = "src/boj13301.rs"
bench = false

[[bin]]
name = "boj15485"
path = "src/boj15485.rs"
bench = false

[[bench]]
name = "smmh"
path = "benches/data_structures/smmh.bench.rs"
harness = false

[[bench]]
name = "std"
path = "benches/std/collections.bench.rs"
harness = false
